--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 streamlit
 jupyter
 langchain
+langchain-core
+langchain-community
+langchain-text-splitters
+langchain-mistralai
+sentence-transformers
 faiss-cpu
 mistralai
