--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ jupyter
 langchain
 langchain-core
 langchain-community
+langchain-huggingface
+sentence-transformers
 langchain-text-splitters
 langchain-mistralai
 sentence-transformers
