--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/team1_app:latest
-          secrets: "mistral_api_key=${{ secrets.MISTRAL_API_KEY }}"
+          secrets: |
+            "MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}"
