--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,11 +3,10 @@ name: ci
 on:
   push:
     branches:
-      - Github-workflow-for-API
+      - Docker-mount-fix
       - main
   pull_request:
     branches:
-      - Github-workflow-for-API
       - main
 
 jobs:
@@ -36,3 +35,5 @@ jobs:
           tags: ${{ vars.DOCKERHUB_USERNAME }}/team1_app:latest
           secrets: |
             "MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}"
+          build-args: |
+            DOCKER_BUILD_VIA_WORKFLOW=true
