--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,9 @@ jobs:
     strategy:
       matrix:
         platform:
+          - linux/amd64
+          - linux/arm64
+          - windows/amd64
           - linux/arm64/v8
     steps:
       -
