--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,8 +50,9 @@ jobs:
           secrets: |
             "MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}"
           platforms: ${{ matrix.platform }}
-          labels: latest
+          labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/team1_app:latest
       -
         name: Export Digest
         run: |
