--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,6 +33,6 @@ jobs:
         -
             name: Build Dockerfile
             run: |
-                docker buildx build \
+                docker buildx build --push \
                 --tag notmik/team1_app:latest \
-                --platform linux/amd64,linux/arm/v7,linux/arm64 .
+                --platform linux/amd64,linux/arm64 .
