--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 # base = "light"
-primaryColor = '#21af85'
-backgroundColor = '#ffffff'
-secondaryBackgroundColor = '#f9f9f9'
-textColor = '#0d0d0d'
-font = "sans serif"
+#primaryColor = '#21af85'
+#backgroundColor = '#ffffff'
+#secondaryBackgroundColor = '#f9f9f9'
+#textColor = '#0d0d0d'
+#font = "sans serif"
